Refactor LanguageManager